name          : blaze-html-example
version       : 0.8.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Blaze-Html example for helix
description   : Blaze-Html example for helix
category      : Web
author        : Anupam Jain
data-dir      : ""

executable blaze-html-example
    build-depends    : base
                     , helix
                     , wai-extra
                     , wai-app-static
                     , warp
                     , text
                     , blaze-html
    main-is          : Main.hs
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src

