name          : kitchen-example
version       : 0.8.1
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Kitchen sink example for helix
description   : Kitchen sink example for helix
category      : Web
author        : Anupam Jain
data-dir      : ""

executable kitchen-example
    build-depends    : base
                     , helix
                     , warp
                     , text
    main-is          : Main.hs
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src
