name          : rest-json-example
version       : 0.8.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : REST JSON example for helix
description   : REST JSON example for helix
category      : Web
author        : Anupam Jain
data-dir      : ""

executable rest-json-example
    build-depends    : base
                     , helix
                     , wai-extra
                     , wai-app-static
                     , warp
                     , http-types
                     , text
                     , aeson
                     , containers
                     , transformers
    main-is          : Main.hs
    other-modules    : PersonCrud
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src
