name          : shakespeare-example
version       : 0.8.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Shakespearean templates example for helix
description   : Shakespearean templates example for helix
category      : Web
author        : Anupam Jain
data-dir      : ""

executable shakespeare-example
    build-depends    : base
                     , helix
                     , wai-extra
                     , wai-app-static
                     , warp
                     , text
                     , shakespeare
                     , blaze-html
    main-is          : Main.hs
    buildable        : True
    default-language : Haskell2010
    other-extensions : OverloadedStrings TemplateHaskell QuasiQuotes TypeFamilies ViewPatterns
    ghc-options      : -Wall
    hs-source-dirs : src
