name          : subsites-example
version       : 0.8.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Subsites examples for helix
description   : Subsites examples for helix
category      : Web
author        : Anupam Jain
data-dir      : ""

executable subsites-example
    build-depends    : base
                     , helix
                     , wai-app-static
                     , wai-extra
                     , warp
                     , http-types
                     , text
                     , aeson
                     , containers
                     , mtl
    main-is          : Main.hs
    other-modules    : HelloSub
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src
